@@ -1,5 +1,9 @@
 2000-01-25  Tim Jenness  <timj@jach.hawaii.edu>
 
+	* Display/GAIA.pm (create_dev): Add sleep after cloning
+
+	* Display/KAPVIEW.pm (histogram): Fix -w warning with $range
+
 	* Convert.pm (UKIRTio2hds): Fix -w warning with $status
 	(hds2ndf_demo): Fix -w warning with $xloc
 
